@@ -50,7 +50,6 @@ const struct shtable2 shtab_aliases[] =
 	"stop",		NV_NOFREE,		"kill -s STOP",
 	"suspend", 	NV_NOFREE,		"kill -s STOP $$",
 #endif /*SIGTSTP */
-	"times",	NV_NOFREE,		"{ { time;} 2>&1;}",
 	"type",		NV_NOFREE,		"whence -v",
 	"",		0,			(char*)0
 };
